--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 requests
+python-dotenv
 transformers
 torch
 pillow
 qwen-vl-utils
 accelerate
+optimum
 psycopg2-binary
+
+# Опционально для GPTQ квантизации (требует компиляцию, может не работать на Windows)
+# auto-gptq
