--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-
 MAX_TOKEN=your_token_here
 
+# Vision Model Settings
 VISION_MODEL_ENABLED=false
+
+# Database Settings
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=max_bot
+DB_USER=postgres
+DB_PASSWORD=your_password_here
