--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 MAX_TOKEN=your_token_here
 
-# Vision Model Settings
+# Vision Model Settings (распознавание изображений)
 VISION_MODEL_ENABLED=false
+
+# Voice Control Settings (голосовое управление)
+VOICE_ENABLED=false
 
 # Database Settings
 DB_HOST=localhost
