--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,12 @@ VISION_MODEL_ENABLED=false
 VOICE_ENABLED=false
 
 # Database Settings
-DB_HOST=localhost
+DB_HOST=localhost | postgres
 DB_PORT=5432
 DB_NAME=max_bot
 DB_USER=postgres
-DB_PASSWORD=your_password_here
+DB_PASSWORD=root
+
+POSTGRES_PASSWORD=root
 
 GIGACHAT_API_KEY=key_heere
